--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "openai": "^5.12.2",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
