--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.14.0",
+    "@google/generative-ai": "^0.24.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "openai": "^5.12.2",
