--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "next": "15.4.6",
     "openai": "^5.12.2",
     "postcss": "^8.5.6",
-    "react": "19.1.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19.1.10",
+    "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "tailwindcss": "^4.1.11",
